# Finance-Trading-System

./: .gitignore  README.md
API/: pom.xml
client/: angular.json  package-lock.json  tsconfig.json
client/src/: styles.css
client/src/app/: app.routes.ts  app.ts
client/src/app/core/services/: orders.service.ts  trade.service.ts
client/src/app/features/main-layout/: main-layout.css  main-layout.html
client/src/app/features/orders/: orders.html  orders.ts
client/src/app/features/trades/: trades.html  trades.ts
client/src/app/shared/models/: table-column.model.ts  trade.model.ts  tradesResponse.model.ts
client/src/app/shared/pipes/: price-pipe.ts
client/src/core/services/: orders.service.ts
client/src/environments/: environment.production.ts
client/src/features/main-layout/: main-layout.ts
client/src/features/orders/: orders.css  orders.html  orders.ts
client/src/features/orders/order-entry/: order-entry.css  order-entry.html  (+1 more)
client/src/shared/models/: order.model.ts  order.ts
engine/: CMakeLists.txt  test_boost.cpp
engine/include/api/: HttpServer.h
engine/include/core/limitOrderBook/: LimitOrderBook.h
engine/include/core/matching-engine/: MatchingEngine.h
engine/include/core/types/: BookSnapshot.h  Order.h  Trade.h
engine/include/handlers/: OrderHandler.h
engine/include/utils/: OrderIdGenerator.h  time_utils.hpp
engine/src/: HttpServer.cpp  main.cpp
engine/src/core/: Order.cpp
engine/src/core/limitOrderBook/: LimitOrderBook.cpp
engine/src/core/matching-engine/: MatchingEngine.cpp
engine/src/handlers/: OrderHandler.cpp
(+23 files in other folders)
